--- a/index.html
+++ b/index.html
@@ -347,11 +347,17 @@
 		<br>
 		
 			<div class="row">
+			<h1 class="big-4">Education</h1>
+			<div class="underline"></div>
+		</div>
+		<br>
+		
+			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2020-2024</span>
     					<h2>Bachelor of Technology - IT</h2>
-    					<span class="position"><b>JNTU-GV College of Engineering</b></span>
+    					<span class="position"><b> <a href="https://jntugvcev.edu.in/">JNTU-GV College of Engineering</a></b></span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
     				</div>
     			</div>
@@ -360,7 +366,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2018-2020</span>
     					<h2>Intermediate - MPC</h2>
-    					<span class="position"><b>Elite Junior College</b></span>
+    					<span class="position"><b> <a href="https://schools.org.in/west-godavari/28151301023/elite-jr-college-dubacherla.html">Elite Junior College</a></b></span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
     				</div>
 				</div>
@@ -369,7 +375,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2017-2018</span>
     					<h2>Secondary School Certificate</h2>
-    					<span class="position"><b>ZPP High School</b></span>
+    					<span class="position"><b> <a href="https://www.linkedin.com/school/zilla-parishad-high-school/">ZPP High School</a></b></span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
 						<p class="mt-4">Got <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS Award</a> and <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> </p>
     				</div>
@@ -391,9 +397,9 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">JAN 2024 - APRIL 2024</span>
-						<h2>Data Analyst</h2>
-						<span class="position"><b>360DIGITMG</b></span>
-						<p class="mt-4" style="text-align: justify;">As a Data Analyst at 360 DIGI TMG, I gained practical experience in extracting, cleaning, and analyzing complex datasets. 
+						<h2>Data Analyst</h2> <b><p ><a href="https://drive.google.com/file/d/1EoMaGPjK7sHzfTFJkISmVr6qAwxeEfNs/view" style="color: magenta;">Certified</a></p></b>
+						<span class="position"><b><a href="https://360digitmg.com/">360DIGITMG</a></b></span>
+						<p class="mt-4" style="text-align: justify;">As a Data Analyst at 360 DIGI TMG in collaboration with APSCHE, I gained practical experience in cleaning, and analyzing complex datasets. 
 							<ul>
 								<li style="text-align: justify;">I focused on identifying key trends, patterns, and insights to support data-driven decision-making for various business problems.</li>
 								<li style="text-align: justify;">My work involved applying statistical analysis and utilizing tools like SQL and potentially Python/R for data manipulation and visualization.</li>
@@ -407,8 +413,8 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">MAY 2023 - JUNE 2023</span>
-						<h2>Full Stack Developer</h2>
-						<span class="position"><b>Miracle Software Systems, Inc</b></span>
+						<h2>Full Stack Developer</h2> <b><p ><a href="https://drive.google.com/file/d/14TpGrZm0m9Wb-90zn3j6g1ZUudr7ZGhd/view" style="color: magenta;">Certified</a></p></b>
+						<span class="position"><b><a href="https://www.miraclesoft.com/">Miracle Software Systems, Inc</a></b></span>
 						<p class="mt-4" style="text-align: justify;">As a Trainee Java Full Stack Developer at Miracle Software Systems, I gained hands-on experience in full-stack web application development.
 							<ul>
 								<li style="text-align: justify;">Primarily worked with Java, Spring Boot, Postman(API) and SQL developing robust and scalable backend services.</li>
@@ -419,6 +425,39 @@
 					</div>
 
 				</div>
+
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">AUGUST 2022 - OCTOBER 2022</span>
+						<h2>Salesforce Developer</h2> <b><p ><a href="https://smartinternz.com/internships/salesforce_certificates/25fadf1aed8557bf7c5355568201d8ee" style="color: magenta;">Certified</a></p></b>
+						<span class="position"><b><a href="https://apsche.smartinternz.com/">APSCHE SmartInternz</a></b></span>
+						<p class="mt-4" style="text-align: justify;">During a virtual internship, I gained practical experience and comprehensive knowledge in Salesforce development by completing the following modules and super badges.
+							<ul>
+								<li style="text-align: justify;">Primarily gaining comprehensive knowledge in Salesforce platform fundamentals, organizational setup, and advanced automation techniques.</li>
+								<li style="text-align: justify;">Developed strong programming and development skills in Apex, Lightning Web Components (LWC), and API integration, proficiency in Salesforce CLI.</li>
+								<li style="text-align: justify;">Apex Specialist and Process Automation Specialist, demonstrating advanced practical expertise in Salesforce development and automation.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">JULY 2022 - AUGUST 2022</span>
+						<h2>Web Developer</h2> <b><p ><a href="https://drive.google.com/file/d/1bJt2_IHwcWWzdOasxIlz1Cnfs4HcL-lw/view?usp=sharing" style="color: magenta;">Certified</a></p></b>
+						<span class="position"><b><a href="https://internship.thesparksfoundation.info/">The Sparks Foundation</a></b></span>
+						<p class="mt-4" style="text-align: justify;">As a Web Development and Design Intern at The Sparks Foundation developed a payment gateway integration website ensuring a responsive and user-friendly interface.
+							<ul>
+								<li style="text-align: justify;">Gained practical experience in front-end web development and design, focusing on translating design concepts into functional web solutions.</li>
+								<li style="text-align: justify;">It enables transaction security, crucial Application interface bridge and a seamless customer checkout experience.</li>
+								<li style="text-align: justify;">Contributed to a project that required attention to both design aesthetics and core functionality, ensuring a seamless user experience.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+
 			</div>
 		</div>
 
