--- a/index.html
+++ b/index.html
@@ -339,12 +339,6 @@
     		</div>
 		<br>
 		<br>
-
-		<div class="row">
-			<h1 class="big-4">Education</h1>
-			<div class="underline"></div>
-		</div>
-		<br>
 		
 			<div class="row">
 			<h1 class="big-4">Education</h1>
@@ -429,13 +423,13 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">AUGUST 2022 - OCTOBER 2022</span>
-						<h2>Salesforce Developer</h2> <b><p ><a href="https://smartinternz.com/internships/salesforce_certificates/25fadf1aed8557bf7c5355568201d8ee" style="color: magenta;">Certified</a></p></b>
+						<h2>SalesforceDeveloper</h2> <b><p ><a href="https://smartinternz.com/internships/salesforce_certificates/25fadf1aed8557bf7c5355568201d8ee" style="color: magenta;">Certified</a></p></b>
 						<span class="position"><b><a href="https://apsche.smartinternz.com/">APSCHE SmartInternz</a></b></span>
 						<p class="mt-4" style="text-align: justify;">During a virtual internship, I gained practical experience and comprehensive knowledge in Salesforce development by completing the following modules and super badges.
 							<ul>
-								<li style="text-align: justify;">Primarily gaining comprehensive knowledge in Salesforce platform fundamentals, organizational setup, and advanced automation techniques.</li>
-								<li style="text-align: justify;">Developed strong programming and development skills in Apex, Lightning Web Components (LWC), and API integration, proficiency in Salesforce CLI.</li>
-								<li style="text-align: justify;">Apex Specialist and Process Automation Specialist, demonstrating advanced practical expertise in Salesforce development and automation.</li>
+								<li style="text-align: justify;">Primarily gaining knowledge in Salesforce fundamentals, organizational setup, and advanced automation techniques.</li>
+								<li style="text-align: justify;">Developed strong programming and development in Apex, Lightning Web Components (LWC), API integration, and Salesforce CLI.</li>
+								<li style="text-align: justify;">Apex Specialist and Process Automation Specialist, demonstrating advanced practical expertise in development and automation.</li>
 							</ul>
 						</p>
 					</div>
@@ -535,7 +529,7 @@
             <li style="text-align: justify;">In 2015, while in 8th class, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a <b>5-year SCHOLARSHIP</b> for my continued education.</li>
 		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister <b>Nara Chandrababu Naidu Sir</b>, an accolade accompanied by a <b>MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 Cash Prize</b>, recognizing my exceptional academic merit.</li>
 		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view?usp=sharing">ACADEMIC EXCELLENCE AWARD</a> on the occasion of <b>National Mathematics Day</b>, recognizing my strong performance in academics.</li>
-		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University</b>, I successfully secured <a href="">FIRST CLASS WITH DISTINCTION</a> in my <b>B.Tech(IT)</b> academics, showcasing consistent high performance.</li>
+		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University College of Engineering</b>, I successfully secured <a href="">FIRST CLASS WITH DISTINCTION</a> in my <b>B.Tech(IT)</b> academics, showcasing consistent high performance.</li>
 		  </ul>
           </div>
         </div>
