--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
 						<span class="position"><b><a href="https://apsche.smartinternz.com/">APSCHE SmartInternz</a></b></span>
 						<p class="mt-4" style="text-align: justify;">During a virtual internship, I gained practical experience and comprehensive knowledge in Salesforce development by completing the following modules and super badges.
 							<ul>
-								<li style="text-align: justify;">Primarily gaining knowledge in Salesforce fundamentals, organizational setup, and advanced automation techniques.</li>
-								<li style="text-align: justify;">Developed strong programming and development in Apex, Lightning Web Components (LWC), API integration, and Salesforce CLI.</li>
-								<li style="text-align: justify;">Apex Specialist and Process Automation Specialist, demonstrating advanced practical expertise in development and automation.</li>
+								<li style="text-align: justify;">Primarily I gained knowledge in Salesforce comprehensive fundamentals, organizational setup, and advanced automation techniques.</li>
+								<li style="text-align: justify;">Developed strong programming and development in Apex, Lightning Web Components, API integration, and Salesforce CLI.</li>
+								<li style="text-align: justify;">Apex Specialist and Process Automation Specialist, demonstrating advanced expertise in development and automation.</li>
 							</ul>
 						</p>
 					</div>
