--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
 						<span class="position"><b><a href="https://apsche.smartinternz.com/">APSCHE SmartInternz</a></b></span>
 						<p class="mt-4" style="text-align: justify;">During a virtual internship, I gained practical experience and comprehensive knowledge in Salesforce development by completing the following modules and super badges.
 							<ul>
-								<li style="text-align: justify;">Primarily I gained knowledge in Salesforce comprehensive fundamentals, organizational setup, and advanced automation techniques.</li>
-								<li style="text-align: justify;">Developed strong programming and development in Apex, Lightning Web Components, API integration, and Salesforce CLI.</li>
+								<li style="text-align: justify;">Primarily I gained knowledge in Salesforce fundamentals, organizational setup, and advanced automation techniques.</li>
+								<li style="text-align: justify;">Developed programming and development in Apex, Lightning Web Components, API integration, and Salesforce CLI.</li>
 								<li style="text-align: justify;">Apex Specialist and Process Automation Specialist, demonstrating advanced expertise in development and automation.</li>
 							</ul>
 						</p>
@@ -443,7 +443,7 @@
 						<span class="position"><b><a href="https://internship.thesparksfoundation.info/">The Sparks Foundation</a></b></span>
 						<p class="mt-4" style="text-align: justify;">As a Web Development and Design Intern at The Sparks Foundation developed a payment gateway integration website ensuring a responsive and user-friendly interface.
 							<ul>
-								<li style="text-align: justify;">Gained practical experience in front-end web development and design, focusing on translating design concepts into functional web solutions.</li>
+								<li style="text-align: justify;">Gained experience in front-end web development and design, focusing on translating design concepts into functional web solutions.</li>
 								<li style="text-align: justify;">It enables transaction security, crucial Application interface bridge and a seamless customer checkout experience.</li>
 								<li style="text-align: justify;">Contributed to a project that required attention to both design aesthetics and core functionality, ensuring a seamless user experience.</li>
 							</ul>
