--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 						<span class="position"><b><a href="https://apsche.smartinternz.com/">APSCHE SmartInternz</a></b></span>
 						<p class="mt-4" style="text-align: justify;">During a virtual internship, I gained practical experience and comprehensive knowledge in Salesforce development by completing the following modules and super badges.
 							<ul>
-								<li style="text-align: justify;">Primarily I gained knowledge in Salesforce fundamentals, organizational setup, and advanced automation techniques.</li>
+								<li style="text-align: justify;">I gained practical knowledge in Salesforce fundamentals, organizational setup, and advanced automation techniques.</li>
 								<li style="text-align: justify;">Developed programming and development in Apex, Lightning Web Components, API integration, and Salesforce CLI.</li>
 								<li style="text-align: justify;">Apex Specialist and Process Automation Specialist, demonstrating advanced expertise in development and automation.</li>
 							</ul>
