--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">JULY 2022 - AUGUST 2022</span>
-						<h2>Web Developer</h2> <b><p ><a href="https://drive.google.com/file/d/1bJt2_IHwcWWzdOasxIlz1Cnfs4HcL-lw/view?usp=sharing" style="color: magenta;">Certified</a></p></b>
+						<h2>Web Developer</h2> <b><p ><a href="https://drive.google.com/file/d/1bJt2_IHwcWWzdOasxIlz1Cnfs4HcL-lw/view" style="color: magenta;">Certified</a></p></b>
 						<span class="position"><b><a href="https://internship.thesparksfoundation.info/">The Sparks Foundation</a></b></span>
 						<p class="mt-4" style="text-align: justify;">As a Web Development and Design Intern at The Sparks Foundation developed a payment gateway integration website ensuring a responsive and user-friendly interface.
 							<ul>
