--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">JAN 2024 - APRIL 2024</span>
-						<h2>Data Analyst</h2> <b><p ><a href="https://drive.google.com/file/d/1EoMaGPjK7sHzfTFJkISmVr6qAwxeEfNs/view" style="color: magenta;">Certified</a></p></b>
+						<h2>Data Analyst</h2> <b><p ><a href="https://drive.google.com/file/d/1EoMaGPjK7sHzfTFJkISmVr6qAwxeEfNs/view" style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;">Certified</a></p></b>
 						<span class="position"><b><a href="https://360digitmg.com/">360DIGITMG</a></b></span>
 						<p class="mt-4" style="text-align: justify;">As a Data Analyst at 360 DIGI TMG in collaboration with APSCHE, I gained practical experience in cleaning, and analyzing complex datasets. 
 							<ul>
@@ -407,7 +407,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">MAY 2023 - JUNE 2023</span>
-						<h2>Full Stack Developer</h2> <b><p ><a href="https://drive.google.com/file/d/14TpGrZm0m9Wb-90zn3j6g1ZUudr7ZGhd/view" style="color: magenta;">Certified</a></p></b>
+						<h2>Full Stack Developer</h2> <b><p ><a href="https://drive.google.com/file/d/14TpGrZm0m9Wb-90zn3j6g1ZUudr7ZGhd/view" style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;">Certified</a></p></b>
 						<span class="position"><b><a href="https://www.miraclesoft.com/">Miracle Software Systems, Inc</a></b></span>
 						<p class="mt-4" style="text-align: justify;">As a Trainee Java Full Stack Developer at Miracle Software Systems, I gained hands-on experience in full-stack web application development.
 							<ul>
@@ -423,7 +423,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">AUGUST 2022 - OCTOBER 2022</span>
-						<h2>SalesforceDeveloper</h2> <b><p ><a href="https://smartinternz.com/internships/salesforce_certificates/25fadf1aed8557bf7c5355568201d8ee" style="color: magenta;">Certified</a></p></b>
+						<h2>SalesforceDeveloper</h2> <b><p ><a href="https://smartinternz.com/internships/salesforce_certificates/25fadf1aed8557bf7c5355568201d8ee" style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;">Certified</a></p></b>
 						<span class="position"><b><a href="https://apsche.smartinternz.com/">APSCHE SmartInternz</a></b></span>
 						<p class="mt-4" style="text-align: justify;">During a virtual internship, I gained practical experience and comprehensive knowledge in Salesforce development by completing the following modules and super badges.
 							<ul>
@@ -439,7 +439,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">JULY 2022 - AUGUST 2022</span>
-						<h2>Web Developer</h2> <b><p ><a href="https://drive.google.com/file/d/1bJt2_IHwcWWzdOasxIlz1Cnfs4HcL-lw/view" style="color: magenta;">Certified</a></p></b>
+						<h2>Web Developer</h2> <b><p ><a href="https://drive.google.com/file/d/1bJt2_IHwcWWzdOasxIlz1Cnfs4HcL-lw/view" style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;">Certified</a></p></b>
 						<span class="position"><b><a href="https://internship.thesparksfoundation.info/">The Sparks Foundation</a></b></span>
 						<p class="mt-4" style="text-align: justify;">As a Web Development and Design Intern at The Sparks Foundation developed a payment gateway integration website ensuring a responsive and user-friendly interface.
 							<ul>
