--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
 		  <div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1AmsXj8qVGcFduYos_vTFRi76p27uWwvb/view?usp=sharing" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+    				<p><a href="https://drive.google.com/file/d/1AmsXj8qVGcFduYos_vTFRi76p27uWwvb/view" class="btn btn-primary py-4 px-5">Download Resume</a></p>
     			</div>
           </div>
         </div>
@@ -371,7 +371,7 @@
     					<h2>Secondary School Certificate</h2>
     					<span class="position"><b> <a href="https://www.linkedin.com/school/zilla-parishad-high-school/">ZPP High School</a></b></span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
-						<p class="mt-4">Got <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS Award</a> and <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> </p>
+						<p class="mt-4">Got <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view">NMMS Award</a> and <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view">PRATIBHA AWARD</a> </p>
     				</div>
 				</div>
     		</div>
@@ -526,10 +526,10 @@
             <h2 class="mb-4">Achievements</h2>
 		  <br>
 		  <ul style="list-style-type:circle">
-            <li style="text-align: justify;">In 2015, while in 8th class, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a <b>5-year SCHOLARSHIP</b> for my continued education.</li>
-		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister <b>Nara Chandrababu Naidu Sir</b>, an accolade accompanied by a <b>MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 Cash Prize</b>, recognizing my exceptional academic merit.</li>
-		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view?usp=sharing">ACADEMIC EXCELLENCE AWARD</a> on the occasion of <b>National Mathematics Day</b>, recognizing my strong performance in academics.</li>
-		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University College of Engineering</b>, I successfully secured <a href="">FIRST CLASS WITH DISTINCTION</a> in my <b>B.Tech(IT)</b> academics, showcasing consistent high performance.</li>
+            <li style="text-align: justify;">In 2015, while in 8th class, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view" style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;"">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a <b>5-year SCHOLARSHIP</b> for my continued education.</li>
+		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view" style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;">PRATIBHA AWARD</a> by the Honorable Chief Minister <b>Nara Chandrababu Naidu Sir</b>, an accolade accompanied by a <b>MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 Cash Prize</b>, recognizing my exceptional academic merit.</li>
+		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view" style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;">ACADEMIC EXCELLENCE AWARD</a> on the occasion of <b>National Mathematics Day</b>, recognizing my strong performance in academics.</li>
+		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University College of Engineering</b>, I successfully secured <a href="style="color: white;" class="btn btn-success btn-sm" style="margin-bottom: 8px;"">FIRST CLASS WITH DISTINCTION</a> in my <b>B.Tech(IT)</b> academics, showcasing consistent high performance.</li>
 		  </ul>
           </div>
         </div>
@@ -590,7 +590,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>West Godavari, India</p>
+	            <p class="btn btn-success btn-sm" style="margin-bottom: 8px;">West Godavari, India</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -599,7 +599,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">99XX228800</a></p>
+	            <p><a href="tel://0101010101" class="btn btn-success btn-sm" style="margin-bottom: 8px;">99XX228800</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -608,7 +608,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">pmohananandkumar@gmail.com</a></p>
+	            <p><a href="pmohananandkumar@gmail.com" class="btn btn-success btn-sm" style="margin-bottom: 8px;">pmohananandkumar@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -617,7 +617,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1AmsXj8qVGcFduYos_vTFRi76p27uWwvb/view?usp=drive_link">ResumeLink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1AmsXj8qVGcFduYos_vTFRi76p27uWwvb/view" class="btn btn-success btn-sm" style="margin-bottom: 8px;">ResumeLink</a></p>
 	          </div>
           </div>
 
