--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="pmohananandkumar@gmail.com" class="btn btn-success btn-sm" style="margin-bottom: 8px;">pmohananandkumar@gmail.com</a></p>
+	            <p><a href="mailto:pmohananandkumar@gmail.com" class="btn btn-success btn-sm" style="margin-bottom: 8px;">pmohananandkumar@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
